# stark-has

./: .gitignore  README.md  index.html  stark-has.html
data/: data-clean.py  final - c5-avx512-xlarge-r26-fullprotocol-dual-hash-goldilocks-blake3-e3.csv  final - c5-avx512-xlarge-r26-fullprotocol-dual-hash-goldilocks-sha3-e3.csv  final - c5-avx512-xlarge-r32-fullprotocol-dual-hash-goldilocks-blake3-e3.csv  final-c5-avx512-xlarge-r26-fullprotocol-dual-hash-pallas-sha3-e3.csv  final-c5-avx512-xlarge-r32-fullprotocol-dual-hash-goldilocks-sha3-e3.csv  final-micro-t4g-rayon-r26-1gb-fullprotocol-dual-hash-golidlocks-keccak-e3.csv  final-micro-t4g-rayon-r26-1gb-fullprotocol-dual-hash-golidlocks-sha3-e3.csv  final-micro-t4g-rayon-r26-1gb-fullprotocol-dual-hash-pallas-blake3-e3.csv  final-micro-t4g-rayon-r32-1gb-fullprotocol-dual-hash-golidlocks-blake3-e3.csv  final-micro-t4g-rayon-r32-1gb-fullprotocol-dual-hash-pallas-blake3-e3.csv  final-micro-t4g-rayon-r32-1gb-fullprotocol-dual-hash-pallas-keccak-e3.csv  final-micro-t4g-rayon-r32-1gb-fullprotocol-dual-hash-pallas-sha3-e3.csv  final-micro-t4g-rayon-r52-1gb-fullprotocol-dual-hash-golidlocks-blake3-e3.csv
results/: final - c5-avx512-xlarge-r26-fullprotocol-dual-hash-goldilocks-keccak-e3.csv  final - c5-avx512-xlarge-r32-fullprotocol-dual-hash-goldilocks-keccak-e3.csv  final - c5-avx512-xlarge-r52-fullprotocol-dual-hash-goldilocks-blake3-e3.csv  final - c5-avx512-xlarge-r52-fullprotocol-dual-hash-goldilocks-sha3-e3.csv  final-c5-avx512-xlarge-r26-fullprotocol-dual-hash-goldilocks-blake3-e3.csv  final-c5-avx512-xlarge-r26-fullprotocol-dual-hash-goldilocks-keccak-e3.csv  final-c5-avx512-xlarge-r26-fullprotocol-dual-hash-goldilocks-sha3-e3.csv  final-c5-avx512-xlarge-r32-fullprotocol-dual-hash-goldilocks-blake3-e3.csv  final-c5-avx512-xlarge-r32-fullprotocol-dual-hash-goldilocks-keccak-e3.csv  final-c5-avx512-xlarge-r32-fullprotocol-dual-hash-pallas-sha3-e3.csv  final-c5-avx512-xlarge-r52-fullprotocol-dual-hash-goldilocks-blake3-e3.csv  final-c5-avx512-xlarge-r52-fullprotocol-dual-hash-goldilocks-keccak-e3.csv  final-c5-avx512-xlarge-r52-fullprotocol-dual-hash-goldilocks-sha3-e3.csv  final-c5-avx512-xlarge-r52-fullprotocol-dual-hash-pallas-sha3-e3.csv  (+18 more)
stark-has-pallas/: Cargo.toml
stark-has-pallas/crates/ark-goldilocks/: Cargo.toml
stark-has-pallas/crates/ark-goldilocks/src/: lib.rs
stark-has-pallas/crates/deep_ali/: Cargo.toml
stark-has-pallas/crates/deep_ali/src/: deep_ali.rs  fri.rs  lib.rs
stark-has-pallas/crates/fft/: Cargo.toml
stark-has-pallas/crates/fft/src/: lib.rs
(+55 files in other folders)
