[package]
name = "fft"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
parallel = [
    "dep:rayon",
    "dep:once_cell",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
]

[dependencies]
ark-ff   = { workspace = true }
ark-poly = { workspace = true }
ark-std  = { workspace = true }
field    = { path = "../field" }
ark-pallas = "0.5"


[dependencies.rayon]
version  = "1.10"
optional = true

[dependencies.once_cell]
version  = "1.19"
optional = true